--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,9 @@ All changes to the repository will be reported here
 ## [0.2.0]
 ### Added
 - Cmake.in file to export objects
+- Installation details to import the package as dependency
+### Changed
+- Main function name renamed to "getoptW"
 
 ## [0.1.2]
 ### Changed
