--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 All changes to the repository will be reported here
 
+## [0.2.0]
+### Added
+- Cmake.in file to export objects
+- Installation details to import the package as dependency
+### Changed
+- Main function name renamed to "getoptW"
+
 ## [0.1.2]
 ### Changed
 - Runtime libraries moved to bin folder in cmake install
